Bug 150821 - Failed assert running a slideshow with Skia (debug build)
Summary: Failed assert running a slideshow with Skia (debug build)
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Impress (show other bugs)
Version:
(earliest affected)
7.5.0.0 alpha0+
Hardware: All All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:7.5.0
Keywords:
Depends on:
Blocks: Skia
  Show dependency treegraph
 
Reported: 2022-09-06 11:33 UTC by Mike Kaganski
Modified: 2022-09-13 15:18 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:


Attachments
A ODP that fails an assert on run (32.12 KB, application/vnd.oasis.opendocument.presentation)
2022-09-06 11:33 UTC, Mike Kaganski
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Mike Kaganski 2022-09-06 11:33:14 UTC
Created attachment 182254 [details]
A ODP that fails an assert on run

Open the attached presentation in a debug build, and run it (F5).

A failed assert is reported at OutputDevice::DrawDeviceAlphaBitmap [1].

The presentation is modified from attachment 166605 [details] from bug 137666, with animation removed from the fontwork.

[1] https://opengrok.libreoffice.org/xref/core/vcl/source/outdev/bitmap.cxx?r=2c6e2fa5#350
Comment 1 Commit Notification 2022-09-13 15:18:05 UTC
Luboš Luňák committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/f28087140a79949b7ba38cd9a724438ea92a44e8

do not assert on "failed" Skia call because of empty size (tdf#150821)

It will be available in 7.5.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.