do not assert on "failed" Skia call because of empty size (tdf#150821)

There's no problem if the output size is actually empty.

Change-Id: I680766919c65fcaad6687f09af28f6e95575c228
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/139830
Tested-by: Jenkins
Reviewed-by: Luboš Luňák <l.lunak@collabora.com>