vcl/source/outdev/bitmap.cxx
@@ -347,7 +347,11 @@ void OutputDevice::DrawDeviceAlphaBitmap( const Bitmap& rBmp, const AlphaMask& r
         }
 
         // we need to make sure Skia never reaches this slow code path
-        assert(!SkiaHelper::isVCLSkiaEnabled());
+        // (but do not fail in no-op cases)
+        assert(!SkiaHelper::isVCLSkiaEnabled()
+            || tools::Rectangle(Point(), rBmp.GetSizePixel())
+                .Intersection(tools::Rectangle(rSrcPtPixel, rSrcSizePixel)).IsEmpty()
+            || mpAlphaVDev->LogicToPixel(mpAlphaVDev->GetOutputSizePixel()).IsEmpty());
     }
 
     tools::Rectangle aBmpRect(Point(), rBmp.GetSizePixel());
